@@ -5,6 +5,7 @@ Fixes:
 Changes:
 - Added auto guidelines
 - Now we can or not display object from master page
+- Draw objects of the master slide behind the objects of the current slide.
 
 Changes after KPresenter 1.3
 ============================
